base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-app-deployment
spec:
  selector:
    matchLabels:
      app: course-app
  template:
    metadata:
      labels:
        app: course-app
    spec:
      containers:
        - name: course-app
          image: hbvhuwe/course-app:latest
          ports:
            - containerPort: 8080
              name: application
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            periodSeconds: 5
            initialDelaySeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 5
            initialDelaySeconds: 10
            timeoutSeconds: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 3
